<resources>
    <string name="app_name">Notes Taking</string>
    <string name="item_date_info_modify">Modified: %s / </string>
    <string name="item_date_info_create">Created: %s</string>
    <string name="dialog_quit_message">Save your changes or discard them?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="tag_name_hint">Tag name</string>
    <string name="done">Done</string>
    <string name="my_tags">MY TAGS</string>
    <string name="available_tag">Available TAG</string>
    <string name="cant_add_tag_images_title">Please save Note first to add TAGS or IMAGES</string>
    <string name="my_images">MY IMAGES</string>
    <string name="apply">Apply</string>
</resources>
