<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.NoteDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/text_title"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_title"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:scrollbars="vertical"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:maxLength="25"
                    android:background="@android:color/transparent"
                    android:hint="Title" />


            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/color_secondary_title_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:gravity="start"
                    android:paddingTop="5dp"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Text content"
                    android:minHeight="200dp"
                    android:id="@+id/edt_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/color_secondary_title_item" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/container_not_saved"
                android:visibility="visible"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cant_add_tag_images_title"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/color_secondary_title_item" />


            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container_saved">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_tags"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/color_secondary_title_item" />

                <com.cunoraz.tagview.TagView
                    xmlns:tagview="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/tag_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    tagview:lineMargin="8dp"
                    tagview:tagMargin="8dp"
                    tagview:textPaddingLeft="8dp"
                    tagview:textPaddingTop="5dp"
                    tagview:textPaddingRight="8dp"
                    tagview:textPaddingBottom="5dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_images"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/color_secondary_title_item" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"

                    android:id="@+id/list_images" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>