<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/action_dilog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/filter_date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="8dp"
                    android:text="Date filter"
                    android:textColor="@color/color_title_item"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_start"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_trans_stroke"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="Start date"
                            android:maxLines="1"
                            android:paddingLeft="10dp"
                            android:paddingTop="8dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="8dp"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_end"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_trans_stroke"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="End date"
                            android:maxLines="1"
                            android:paddingLeft="10dp"
                            android:paddingTop="8dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="8dp"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"

                android:layout_marginEnd="16dp"
                android:background="@color/color_image_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filter_date_field" />

            <LinearLayout
                android:id="@+id/filter_tag_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="8dp"
                    android:text="Tag filter"
                    android:textColor="@color/color_title_item"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="7"
                        android:background="@drawable/btn_trans_stroke"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/btn_trans_background"
                            android:id="@+id/edt_tag_name"
                            android:maxLines="1"
                            android:maxLength="20"

                            android:inputType="text"
                            android:hint="@string/tag_name_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <Button
                        android:layout_width="0dp"
                        android:text="@string/add"
                        android:layout_weight="3"
                        android:background="@drawable/btn_trans_stroke"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_add_tag"/>

                </LinearLayout>

                <com.cunoraz.tagview.TagView xmlns:tagview="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/tag_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    tagview:lineMargin="8dp"
                    tagview:tagMargin="8dp"
                    tagview:textPaddingBottom="5dp"
                    tagview:textPaddingLeft="8dp"
                    tagview:textPaddingRight="8dp"
                    tagview:textPaddingTop="5dp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/action_dilog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/color_default_button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_trans_background"
            android:text="@string/apply" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
